# ael-cpp

./: .gitignore  .ignore  CMakeLists.txt  Makefile  README.md
boards/pi_pico/: CMakeLists.txt
boards/pi_pico/extras/: adxl345.cpp  lis3dh.cpp
boards/pi_pico/includes/ael/boards/pi_pico/: gpio.hpp  spi.hpp  timer.hpp
boards/pi_pico/includes/ael/boards/pi_pico/extras/: adxl345.hpp  lis3dh.hpp
cpp/: CMakeLists.txt  compile_flags.txt  gen_clangd.sh
cpp/boards/: CMakeLists.txt
cpp/boards/pi_pico/: CMakeLists.txt
cpp/boards/pi_pico/extras/: lis3dh.cpp
cpp/boards/pi_pico/includes/ael/boards/pi_pico/: gpio.hpp  spi.hpp
cpp/boards/pi_pico/includes/ael/boards/pi_pico/extras/: lis3dh.hpp
cpp/boards/pico/: CMakeLists.txt
cpp/boards/pico/includes/ael/boards/pico/: gpio.hpp  spi.hpp
cpp/includes/: array.hpp
cpp/includes/ael/: ael.hpp  types.hpp
cpp/includes/ael/boards/pico/: gpio.hpp  spi.hpp
cpp/main/: CMakeLists.txt
cpp/main/includes/ael/: types.hpp
cpp/peripherals/: CMakeLists.txt
cpp/peripherals/lis3dh/: CMakeLists.txt
cpp/peripherals/lis3dh/includes/ael/peripherals/lis3dh/: lis3dh.hpp  registers.hpp
drivers/: CMakeLists.txt
drivers/adxl345/: CMakeLists.txt
drivers/adxl345/includes/ael/drivers/adxl345/: registers.hpp
drivers/interfaces/: CMakeLists.txt
drivers/interfaces/includes/ael/drivers/interfaces/: accelerometer.hpp
drivers/lis3dh/: CMakeLists.txt
drivers/lis3dh/includes/ael/drivers/lis3dh/: registers.hpp
examples/: CMakeLists.txt  adxl345.cpp  lis3dh.cpp  main.cpp  run.sh
main/: CMakeLists.txt
main/includes/ael/: array.hpp  types.hpp
peripherals/: CMakeLists.txt
peripherals/adxl345/: CMakeLists.txt
peripherals/adxl345/includes/ael/peripherals/adxl345/: registers.hpp
peripherals/interfaces/: CMakeLists.txt
peripherals/interfaces/includes/ael/peripherals/interfaces/: accelerometer.hpp
peripherals/lis3dh/: CMakeLists.txt
peripherals/lis3dh/includes/ael/peripherals/lis3dh/: lis3dh.hpp  registers.hpp
scripts/: gen_comp_flags.sh  gen_comp_flags.zsh
test/: CMakeLists.txt  test1.cpp
